# Persistia

./: .gitignore  AUTORESEARCH.md  LICENSE  Project_specs.txt  README.md  anchor.js  local-node-a.toml  local-node-b.toml  package-lock.json  package.json  wrangler.toml
blog/: introducing-persistia-x.txt  introducing-persistia.md
cli/: persistia.ts
client/: dashboard.html  game.html  index.html  script.js  verifier.html  wallet.html
contracts/cosmwasm-compat/: Cargo.toml
contracts/cosmwasm-compat/src/: lib.rs  storage.rs  types.rs
contracts/example-counter/: Cargo.toml
contracts/example-oracle/: Cargo.toml
contracts/marketplace/: Cargo.toml
contracts/oracle-receiver/: PersistiaOracleFactory.sol  PersistiaOracleReceiver.sol
contracts/persistia-sdk/: Cargo.toml
contracts/token-standard/: Cargo.toml
contracts/zk/: Cargo.toml  METAL_GPU_RESEARCH.md
contracts/zk-noir/: Nargo.toml  README.md  RESEARCH.md
contracts/zk-onchain-verifier/: BLOG.md  go.mod
contracts/zk/program/: Cargo.toml
contracts/zk/program/src/: main.rs
contracts/zk/prover/: Cargo.toml  PROVER-GUIDE.md  run-local.sh  run-supervised.sh
contracts/zk/prover/.cargo/: config.toml
contracts/zk/prover/src/: main.rs
contracts/zk/types/: Cargo.toml
contracts/zk/types/src/: lib.rs
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: build-app.sh  bundle-resources.sh
desktop/src/: App.svelte
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: backlog.md  cloudflare-tools-roadmap.md  compute-marketplace-research.md  free-tier-compute-reference.md  persistia-claw.md
join/: README.md  setup.sh  wrangler.toml
public/: dashboard.html  game.html  inference.html  oracle.html  services.html  verifier.html  wallet.html
scripts/: deploy.sh  generate-events.ts  prover-calibrate.ts  ramp-events.ts  run-validators.ts  test-anchor.ts
skills/persistia/: SKILL.md
src/: PersistiaDO.ts  ResetDO.ts  adaptive-params.ts  ai-services.ts  anchoring.ts  app-sdk.ts  consensus.ts  contract-executor.ts  cross-shard.ts  deterministic-replay.ts  durable-queue.ts  fee-splitter.ts  fraud-proofs.ts  gossip.ts  grumpkin-schnorr.ts  index.ts  inference-pool.ts  llm-metering.ts  mpp.ts  node-identity.ts  node-manifest.ts  oracle-mesh.ts  oracle-mirrors.ts  oracle-network.ts  oracle.ts  persistia-agent.ts  persistia-claw.ts  poseidon2.ts  provider-proxy.ts  provider-registry.ts  service-attestations.ts  service-federation.ts  settlement.ts  snapshot.ts  state-proofs.ts  transcript.ts  triggers.ts  types.ts  validator-registry.ts  vfs.ts  (+2 more)
standalone/: package-lock.json  package.json  tsconfig.json
standalone/src/: node.ts  server.ts  sql-compat.ts
(+108 files in other folders)
