[package]
name = "persistia-zk-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "persistia-prover"
path = "src/main.rs"

[dependencies]
persistia-zk-types = { path = "../types", default-features = false }
sp1-sdk = { version = "4.0.0", default-features = false }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
anyhow = "1"
chrono = "0.4"
url = "2"

[build-dependencies]
sp1-build = "4.0.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
